--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -25,7 +25,7 @@ const { Content } = await post.render();
   <article>
     <div class="mx-5">
       <a href="/blog">
-        <div class="inline-flex items-center gap-2 mt-5 text-blue-950">
+        <div class="inline-flex items-center gap-2 mt-5 text-primary">
           <Icon name="arrow-right" class="w-5 h-5 rotate-180 inline" /> Volver al
           Blog
         </div>
