feat: Update BaseHead component for improved font loading and title structure

--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -30,14 +30,13 @@ const { title, description, image = '/placeholder.jpg', tags = [] } = Astro.prop
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/DancingScript.ttf" as="font" type="font/ttf" crossorigin />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
+<title>{SITE_TITLE} | {title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 <meta name="keywords" content={tags.join(", ")} />
