feat: Update Footer and Navbar components for improved styling consistency and readability

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -2,15 +2,15 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<footer class="bg-white">
+<footer class="bg-[#8c3f95]">
   <div
     class="mx-auto max-w-screen-xl space-y-8 px-4 py-16 sm:px-6 lg:space-y-16 lg:px-8"
   >
     <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
       <div>
-        <div class="text-blue-950">
+        <div class="text-white">
           <p class="text-sm font-semibold">
-            <span class="text-2xl uppercase">Agítalo Suave</span>
+            <span class="text-4xl capitalize font-cursive">Agítalo Suave</span>
             <br />
             <span class="italic"
               >Explorando el mundo de los cócteles, a mi ritmo</span
@@ -23,7 +23,7 @@ import { Icon } from "astro-icon/components";
               href="www.facebook.com"
               rel="noreferrer"
               target="_blank"
-              class="text-gray-500 transition hover:text-blue-950"
+              class="text-white transition hover:text-rose-200"
             >
               <span class="sr-only">Facebook</span>
               <Icon name="facebook" class="size-6" />
@@ -35,7 +35,7 @@ import { Icon } from "astro-icon/components";
               href="www.instagram.com"
               rel="noreferrer"
               target="_blank"
-              class="text-gray-500 transition hover:text-blue-950"
+              class="text-white transition hover:text-rose-200"
             >
               <span class="sr-only">Instagram</span>
               <Icon name="instagram" class="size-6" />
@@ -47,7 +47,7 @@ import { Icon } from "astro-icon/components";
               href="www.tiktok.com"
               rel="noreferrer"
               target="_blank"
-              class="text-gray-500 transition hover:text-blue-950"
+              class="text-white transition hover:text-rose-200"
             >
               <span class="sr-only">TikTok</span>
               <Icon name="tiktok" class="size-6" />
@@ -60,26 +60,26 @@ import { Icon } from "astro-icon/components";
         class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:col-span-2 lg:grid-cols-3"
       >
         <div>
-          <p class="font-medium text-gray-900">Blog</p>
+          <p class="font-medium text-white">Blog</p>
 
           <ul class="mt-6 space-y-4 text-sm">
             <li>
               <a
                 href="/recetas"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
                 >Recetas
               </a>
             </li>
             <li>
               <a
                 href="/bitacora"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
               >
                 Bitácora
               </a>
             </li>
             <li>
-              <a href="/tips" class="text-gray-700 transition hover:opacity-75">
+              <a href="/tips" class="text-white transition hover:text-rose-200">
                 Tips
               </a>
             </li>
@@ -87,20 +87,20 @@ import { Icon } from "astro-icon/components";
         </div>
 
         <div>
-          <p class="font-medium text-gray-900">Acerca de</p>
+          <p class="font-medium text-white">Acerca de</p>
 
           <ul class="mt-6 space-y-4 text-sm">
             <li>
               <a
                 href="/legal/sobre-mi"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
                 >Sobre mi
               </a>
             </li>
             <li>
               <a
                 href="/contact"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
                 >Contacto
               </a>
             </li>
@@ -108,13 +108,13 @@ import { Icon } from "astro-icon/components";
         </div>
 
         <div>
-          <p class="font-medium text-gray-900">Legal</p>
+          <p class="font-medium text-white">Legal</p>
 
           <ul class="mt-6 space-y-4 text-sm">
             <li>
               <a
                 href="/legal/politica-de-privacidad"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
               >
                 Política de Privacidad
               </a>
@@ -123,7 +123,7 @@ import { Icon } from "astro-icon/components";
             <li>
               <a
                 href="/legal/terminos-y-condiciones"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
               >
                 Términos y Rondiciones
               </a>
@@ -132,7 +132,7 @@ import { Icon } from "astro-icon/components";
             <li>
               <a
                 href="/legal/exencion-de-responsabilidad"
-                class="text-gray-700 transition hover:opacity-75"
+                class="text-white transition hover:text-rose-200"
               >
                 Exención de Responsabilidad
               </a>
@@ -141,7 +141,7 @@ import { Icon } from "astro-icon/components";
         </div>
       </div>
     </div>
-    <p class="text-xs text-gray-500">
+    <p class="text-xs text-white">
       &copy; 2025. Made with ❤️ by an enthusiastic bartender
     </p>
   </div>
