--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -2,11 +2,11 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<header class="bg-background-alt">
+<header class="bg-background">
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="md:flex md:items-center md:gap-12">
-        <a class="block text-blue-950" href="/">
+        <a class="block text-primary" href="/">
           <span class="sr-only">Home</span>
           <Icon name="logo" class="h-10 w-auto" />
         </a>
@@ -17,7 +17,7 @@ import { Icon } from "astro-icon/components";
           <ul class="flex items-center gap-6 text-sm">
             <li>
               <a
-                class="text-blue-950 transition hover:text-blue-950/75"
+                class="text-primary transition hover:text-primary/75"
                 href="/recetas"
               >
                 Recetas
@@ -26,7 +26,7 @@ import { Icon } from "astro-icon/components";
 
             <li>
               <a
-                class="text-blue-950 transition hover:text-blue-950/75"
+                class="text-primary transition hover:text-primary/75"
                 href="/bitacora"
               >
                 Bitácora
@@ -35,7 +35,7 @@ import { Icon } from "astro-icon/components";
 
             <li>
               <a
-                class="text-blue-950 transition hover:text-blue-950/75"
+                class="text-primary transition hover:text-primary/75"
                 href="/tips"
               >
                 Tips
@@ -43,7 +43,7 @@ import { Icon } from "astro-icon/components";
             </li>
             <li>
               <a
-                class="text-blue-950 transition hover:text-blue-950/75"
+                class="text-primary transition hover:text-primary/75"
                 href="/legal/sobre-mi"
               >
                 Sobre mi
@@ -55,7 +55,7 @@ import { Icon } from "astro-icon/components";
 
       <div id="mobile" class="block md:hidden">
         <button
-          class="rounded-sm bg-gray-100 p-2 text-blue-950 transition hover:text-blue-950/75"
+          class="rounded-sm bg-gray-100 p-2 text-primary transition hover:text-primary/75"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -79,10 +79,10 @@ import { Icon } from "astro-icon/components";
       >
         <nav aria-label="Mobile">
           <ul class="flex flex-col gap-4 text-sm">
-            <li><a href="/recetas" class="text-blue-950">Recetas</a></li>
-            <li><a href="/bitacora" class="text-blue-950">Bitácora</a></li>
-            <li><a href="/tips" class="text-blue-950">Tips</a></li>
-            <li><a href="/legal/sobre-mi" class="text-blue-950">Sobre mi</a></li>
+            <li><a href="/recetas" class="text-primary">Recetas</a></li>
+            <li><a href="/bitacora" class="text-primary">Bitácora</a></li>
+            <li><a href="/tips" class="text-primary">Tips</a></li>
+            <li><a href="/legal/sobre-mi" class="text-primary">Sobre mi</a></li>
           </ul>
         </nav>
       </div>
