fix: Update contact link in Footer component to use Spanish path

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -99,7 +99,7 @@ import { Icon } from "astro-icon/components";
             </li>
             <li>
               <a
-                href="/contact"
+                href="/contacto"
                 class="text-white transition hover:text-rose-200"
                 >Contacto
               </a>
