--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,14 +1,13 @@
-<section class="bg-gray-50">
+<section class="bg-background">
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
     <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
       <div class="lg:col-span-2 lg:py-12">
         <p class="max-w-xl text-lg">
           <span></span>
-          <strong>¿Con ganas de algo nuevo?</strong>
-          Escríbenos y da el primer paso hacia la aventura vertical. Tanto si
-          quieres probar por primera vez como si ya escalas y quieres mejorar tu
-          técnica, estamos aquí para ayudarte a llegar más alto. ¡Contáctanos y
-          empieza a escalar con nosotros!
+          <strong>¿Tienes una duda, sugerencia o solo quieres saludar?</strong>
+          Escríbeme usando este formulario y te responderé tan pronto como
+          pueda. No soy un bar abierto 24/7, pero siempre estoy atento a nuevos
+          brindis y buenas conversaciones.
         </p>
       </div>
 
@@ -51,9 +50,9 @@
           <div class="mt-4">
             <button
               type="submit"
-              class="inline-block w-full rounded-sm bg-primary px-5 py-3 font-medium text-white sm:w-auto"
+              class="inline-block w-full rounded-sm bg-complementary px-5 py-3 font-medium text-white sm:w-auto"
             >
-              Registrarme
+              Enviar
             </button>
           </div>
         </form>
