--- a/src/components/BlogEntries.astro
+++ b/src/components/BlogEntries.astro
@@ -12,7 +12,7 @@ const blogEntries = blogPosts.slice(0, 3);
     <div class="md:flex md:items-end md:justify-between">
       <div class="max-w-xl">
         <h2 class="text-4xl font-bold tracking-tight text-complementary sm:text-5xl">
-          Descubre las últimas aventuras en nuestro Blog
+          Lo más reciente en el blog
         </h2>
       </div>
 
