--- a/src/components/FeaturedReceipe.astro
+++ b/src/components/FeaturedReceipe.astro
@@ -1,36 +1,44 @@
 ---
 import { Image } from "astro:assets";
-import image from "../assets/cta-index-1.avif";
+import { getCollection } from "astro:content";
+
+const blogPosts = await getCollection("blog");
+const blogEntry = blogPosts.find(
+  ({ data: entry }) => entry.type === "receta" && entry.featured
+);
+const receipt = blogEntry?.data;
 ---
 
-<section class="bg-background-alt text-base py-16 px-6 md:px-12">
-  <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8 items-center">
-    <div>
-      <h2 class="text-2xl md:text-3xl font-bold text-complementary mb-4">
-        Receta destacada del mes
-      </h2>
-      <h3 class="text-xl font-semibold text-accent mb-2">Mojito Clásico</h3>
-      <p class="text-text mb-4">
-        El equilibrio perfecto entre acidez, dulzura y espuma. Esta es la receta
-        que más repito en casa, no solo por lo rica que es, sino porque siempre
-        me recuerda que los clásicos no fallan.
-      </p>
-      <a
-        href="/blog/mojito-clasico"
-        class="inline-block border border-accent text-accent transition hover:bg-accent hover:text-white px-4 py-2 rounded"
-      >
-        Ver receta completa
-      </a>
-    </div>
-    <div>
-      <Image
-        alt="Mojito Clásico"
-        src={image}
-        class="rounded-lg shadow-md"
-        width={400}
-        height={100}
-        quality="high"
-      />
-    </div>
-  </div>
-</section>
+{
+  receipt && (
+    <section class="bg-background-alt text-base py-16 px-6 md:px-12">
+      <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8 items-center">
+        <div>
+          <h2 class="text-2xl md:text-3xl font-bold text-complementary mb-4">
+            Receta destacada del mes
+          </h2>
+          <h3 class="text-xl font-semibold text-accent mb-2">
+            {receipt.title}
+          </h3>
+          <p class="text-text mb-4">{receipt.excerpt}</p>
+          <a
+            href={`/blog/receta/${blogEntry?.slug}`}
+            class="inline-block border border-accent text-accent transition hover:bg-accent hover:text-white px-4 py-2 rounded"
+          >
+            Ver receta completa
+          </a>
+        </div>
+        <div>
+          <Image
+            alt={receipt.title}
+            src={receipt.image}
+            class="rounded-lg shadow-md max-h-100 object-cover"
+            width={400}
+            height={400}
+            quality="high"
+          />
+        </div>
+      </div>
+    </section>
+  )
+}
