--- a/src/pages/tips.astro
+++ b/src/pages/tips.astro
@@ -1,10 +1,11 @@
 ---
-import BlogCard from "../../components/BlogCard.astro";
-import Hero from "../../components/Hero.astro";
-import MainLayout from "../../layouts/MainLayout.astro";
+import BlogCard from "../components/BlogCard.astro";
+import Hero from "../components/Hero.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 
 const blogPosts = await getCollection("blog");
+const filteredPosts = blogPosts.filter((post) => post.data.type === "tip");
 ---
 
 <MainLayout title="Blog">
@@ -14,17 +15,17 @@ const blogPosts = await getCollection("blog");
   />
   <section class="bg-background-alt">
     <div class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 lg:px-8 lg:py-16">
-      <div class="max-w-xl">
+      <div class="max-w-6xl">
         <h2
           class="text-4xl font-bold tracking-tight text-complementary sm:text-5xl"
         >
-          Lo más reciente en el blog
+          Los tips más recientes
         </h2>
       </div>
       <div
         class="mt-12 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4"
       >
-        {blogPosts.map((post) => <BlogCard post={post} />)}
+        {filteredPosts.map((post) => <BlogCard post={post} />)}
       </div>
     </div>
   </section>
