--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,7 +1,7 @@
 @import "./global.css";
 
 article { 
-  @apply bg-gray-50 py-5;
+  @apply py-5;
 }
 
 article > * {
@@ -25,7 +25,7 @@ article p {
 }
 
 article a {
-  @apply text-primary hover:underline;
+  @apply text-accent hover:underline;
 }
 
 article ul {
