--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -125,7 +125,7 @@ import { Icon } from "astro-icon/components";
                 href="/legal/terminos-y-condiciones"
                 class="text-white transition hover:text-rose-200"
               >
-                Términos y Rondiciones
+                Términos y Condiciones
               </a>
             </li>
 
