feat: Integrate Google Tag Manager and update social media links to include HTTPS

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -20,7 +20,7 @@ import { Icon } from "astro-icon/components";
         <ul class="mt-8 flex gap-6">
           <li>
             <a
-              href="www.facebook.com"
+              href="https://www.facebook.com"
               rel="noreferrer"
               target="_blank"
               class="text-white transition hover:text-rose-200"
@@ -32,7 +32,7 @@ import { Icon } from "astro-icon/components";
 
           <li>
             <a
-              href="www.instagram.com"
+              href="https://www.instagram.com"
               rel="noreferrer"
               target="_blank"
               class="text-white transition hover:text-rose-200"
@@ -44,7 +44,7 @@ import { Icon } from "astro-icon/components";
 
           <li>
             <a
-              href="www.tiktok.com"
+              href="https://www.tiktok.com"
               rel="noreferrer"
               target="_blank"
               class="text-white transition hover:text-rose-200"
