--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -20,7 +20,7 @@ const { title, description, tags, image } = Astro.props;
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- <Analytics /> -->
+    <Analytics />
     <BaseHead
       title={title}
       description={description}
