--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,7 +16,7 @@ const { title, description } = Astro.props as LayoutProps;
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- <Analytics /> -->
+    <Analytics />
     <BaseHead title={title} description={description} />
   </head>
   <body>
