--- a/src/pages/bitacora.astro
+++ b/src/pages/bitacora.astro
@@ -5,7 +5,9 @@ import MainLayout from "../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 
 const blogPosts = await getCollection("blog");
-const filteredPosts = blogPosts.filter((post) => post.data.type === "bitacora");
+const filteredPosts = blogPosts
+  .filter((post) => post.data.type === "bitacora")
+  .sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 ---
 
 <MainLayout title="Blog">
