--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,6 +5,7 @@ import MainLayout from "../../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 
 const blogPosts = await getCollection("blog");
+const sortedBlogPosts = blogPosts.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 ---
 
 <MainLayout title="Blog">
@@ -24,7 +25,7 @@ const blogPosts = await getCollection("blog");
       <div
         class="mt-12 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4"
       >
-        {blogPosts.map((post) => <BlogCard post={post} />)}
+        {sortedBlogPosts.map((post) => <BlogCard post={post} />)}
       </div>
     </div>
   </section>
