fix: Update ContactForm styles for improved accessibility and Navbar link hover effect

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -5,20 +5,20 @@
         <p class="max-w-xl text-lg">
           <span></span>
           <strong>¿Tienes una duda, sugerencia o solo quieres saludar?</strong>
-          Escríbeme usando este formulario y te responderé tan pronto como
-          pueda. No soy un bar abierto 24/7, pero siempre estoy atento a nuevos
-          brindis y buenas conversaciones.
+          Escríbeme usando este formulario y te responderé tan pronto como pueda.
+          No soy un bar abierto 24/7, pero siempre estoy atento a nuevos brindis
+          y buenas conversaciones.
         </p>
       </div>
 
       <div
-        class="rounded-lg bg-white p-8 shadow-lg lg:col-span-3 lg:p-12 flex items-center"
+        class="rounded-lg bg-white/50 p-8 shadow-lg lg:col-span-3 lg:p-12 flex items-center"
       >
         <form action="#" class="space-y-4 w-full">
           <div>
             <label class="sr-only" for="name">Nombre completo</label>
             <input
-              class="w-full rounded-lg border border-gray-200 p-3 text-sm"
+              class="w-full rounded-lg border border-gray-200 p-3 text-sm outline-complementary"
               placeholder="Nombre completo"
               type="text"
               id="name"
@@ -29,7 +29,7 @@
             <div>
               <label class="sr-only" for="email">Email</label>
               <input
-                class="w-full rounded-lg border border-gray-200 p-3 text-sm"
+                class="w-full rounded-lg border border-gray-200 p-3 text-sm outline-complementary"
                 placeholder="Email"
                 type="email"
                 id="email"
@@ -39,7 +39,7 @@
             <div>
               <label class="sr-only" for="phone">Telefono</label>
               <input
-                class="w-full rounded-lg border border-gray-200 p-3 text-sm"
+                class="w-full rounded-lg border border-gray-200 p-3 text-sm outline-complementary"
                 placeholder="Telefono"
                 type="tel"
                 id="phone"
