--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -69,7 +69,7 @@ const links = [
                 <li>
                   <a
                     href={link.url}
-                    class="block w-full py-2 pl-2 rounded-sm hover:bg-accent/5 text-primary mb-1"
+                    class="block w-full py-2 pl-2 text-primary"
                   >
                     {link.text}
                   </a>
