feat: Add "Técnica" link to Navbar and create corresponding blog page with filtering for técnica posts

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -79,6 +79,13 @@ import { Icon } from "astro-icon/components";
               </a>
             </li>
             <li>
+              <a
+                href="/tecnica"
+                class="text-white transition hover:text-rose-200"
+                >Técnica
+              </a>
+            </li>
+            <li>
               <a href="/tips" class="text-white transition hover:text-rose-200">
                 Tips
               </a>
