--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -4,6 +4,7 @@ import { Icon } from "astro-icon/components";
 const links = [
   { url: "/recetas", text: "Recetas" },
   { url: "/bitacora", text: "Bitácora" },
+  { url: "/tecnica", text: "Técnica" },
   { url: "/tips", text: "Tips" },
   { url: "/legal/sobre-mi", text: "Sobre mi" },
 ];
