--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -14,7 +14,13 @@
       <div
         class="rounded-lg bg-white/50 p-8 shadow-lg lg:col-span-3 lg:p-12 flex items-center"
       >
-        <form action="#" class="space-y-4 w-full">
+        <form
+          action="#"
+          class="space-y-4 w-full"
+          name="contacto"
+          data-netlify="true"
+        >
+          <input type="hidden" name="form-name" value="contacto" />
           <div>
             <label class="sr-only" for="name">Nombre completo</label>
             <input
