fix: Add missing name attributes to input fields in ContactForm for proper form submission

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -29,6 +29,7 @@
               placeholder="Nombre completo"
               type="text"
               id="name"
+              name="name"
             />
           </div>
 
@@ -40,6 +41,7 @@
                 placeholder="Email"
                 type="email"
                 id="email"
+                name="email"
               />
             </div>
 
@@ -50,6 +52,7 @@
                 placeholder="Telefono"
                 type="tel"
                 id="phone"
+                name="phone"
               />
             </div>
           </div>
