refactor: Improve type definitions for image handling in BaseHead and BlogLayout components

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -7,10 +7,17 @@ import Footer from "../components/layout/Footer.astro";
 import Analytics from "../components/layout/Analytics.astro";
 import BaseHead from "./BaseHead.astro";
 
+interface AstroImageAsset {
+  src: string;
+  width: number;
+  height: number;
+  format: string;
+}
+
 interface Props {
   title: string;
   tags: string[];
-  image: any;
+  image: AstroImageAsset;
   description: string;
 }
 
@@ -24,7 +31,7 @@ const { title, description, tags, image } = Astro.props;
     <BaseHead
       title={title}
       description={description}
-      image={image}
+      image={image.src}
       tags={tags}
     />
   </head>
